--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 Django==3.2.10
 django-taggit==3.1.0
 Pillow==11.1.0
-python-telegram-bot==20.1
 python-dotenv==1.0.0
+psycopg2-binary==2.9.10
+sqlparse==0.5.3
+tzdata==2024.2
